<resources>
    <string name="app_name">ProjectHive</string>
    <string name="headertriangle">HeaderTriangle</string>
    <string name="projecthive_title">ProjectHive</string>
    <string name="log_in_text">Увійти</string>
    <string name="second_part_text">Ефективно керуй проектами, використовуючи ProjectHive</string>
    <string name="fourth_part_text">Спробуй наші зручні інструменти для керування задачами</string>
    <string name="start_working">Почати роботу</string>
    <string name="back_to_main">На головну</string>
    <string name="log_in_word">Авторизація</string>
    <string name="email_text">електронна пошта</string>
    <string name="example_mail_com">admin@gmail.com</string>
    <string name="psw_text">пароль</string>
    <string name="psw">********</string>
    <string name="log_in_button_text">Увійти</string>
    <string name="go_to_registration">Перейти до реєстрації</string>
    <string name="go_to_sign_in">Перейти до авторизації</string>
    <string name="register_button_text">Зареєструватися</string>
    <string name="register_text">Реєстрація</string>
    <string name="projects_text">Проекти</string>
    <string name="project_name">project name</string>
    <string name="search_text">Пошук :</string>
    <string name="no_projects_message">Тут поки що тихо, навіть занадто...</string>
    <string name="create_project_text">Створити проект</string>
    <string name="calendar_text">Календар</string>
    <string name="go_to_button_text">Перейти</string>
    <string name="profil_name">Профіль</string>
    <string name="desc_for_cover">change cover background</string>
    <string name="extra_info_text">Детальна інформація</string>
    <string name="nickname">Nickname</string>
    <string name="email">Email</string>
    <string name="name">Ім\'я</string>
    <string name="person_name">Artem</string>
    <string name="last_name">Прізвище</string>
    <string name="person_last_name">Васильович</string>
    <string name="position">Посада</string>
    <string name="maneger">Користувач</string>
    <string name="profile_text">Профіль</string>
    <string name="artem">Artem</string>
</resources>