<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/second_color"
    tools:context=".LogInActivity">

    <Button
        android:id="@+id/back_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/second_color"
        android:textColor="@color/hint_color"
        android:text="@string/back_to_main" />

    <ImageView
        android:id="@+id/logo"
        android:layout_width="24pt"
        android:layout_height="24pt"
        android:layout_marginTop="5pt"
        android:layout_centerHorizontal="true"
        android:contentDescription="@string/headertriangle"
        app:srcCompat="@drawable/triangle"/>

    <TextView
        android:id="@+id/title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="10pt"
        android:layout_marginTop="10pt"
        android:layout_marginStart="5pt"
        android:layout_toEndOf="@id/logo"
        android:text="@string/projecthive_title"
        tools:ignore="RelativeOverlap" />

    <Button
        android:id="@+id/register_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/title"
        android:backgroundTint="@color/second_color"
        android:textColor="@color/hint_second_color"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="8pt"
        android:text="@string/go_to_registration" />

    <RelativeLayout
        android:id="@+id/login_layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/logo"
        android:layout_marginVertical="20pt"
        android:layout_marginHorizontal="10pt"
        android:elevation="20dp"
        android:background="@color/white">

        <TextView
            android:id="@+id/log_in_word"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="15pt"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="10pt"
            android:text="@string/log_in_word"
            tools:ignore="RelativeOverlap" />

        <TextView
            android:id="@+id/email_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="10pt"
            android:layout_below="@id/log_in_word"
            android:layout_marginTop="20pt"
            android:layout_marginStart="10pt"
            android:text="@string/email_text"
            tools:ignore="RelativeOverlap" />

        <EditText
            android:id="@+id/editTextTextEmailAddress"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:layout_below="@id/email_text"
            android:background="@color/grey_bg"
            android:layout_marginHorizontal="10pt"
            android:layout_marginTop="5pt"
            android:textSize="10pt"
            android:paddingStart="5pt"
            android:hint="@string/example_mail_com"
            android:ems="10"
            android:textColor="@color/black"
            android:textColorHint="@color/hint_color"
            android:inputType="textEmailAddress"
            tools:ignore="RtlSymmetry"
            android:elevation="10dp"
            android:autofillHints="tr" />

        <TextView
            android:id="@+id/psw_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="10pt"
            android:layout_below="@id/editTextTextEmailAddress"
            android:layout_marginTop="20pt"
            android:layout_marginStart="10pt"
            android:text="@string/psw_text"
            tools:ignore="RelativeOverlap" />

        <EditText
            android:id="@+id/editTextTextPassword"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:layout_below="@id/psw_text"
            android:background="@color/grey_bg"
            android:layout_marginHorizontal="10pt"
            android:layout_marginTop="5pt"
            android:textSize="10pt"
            android:paddingStart="5pt"
            android:hint="@string/psw"
            android:ems="10"
            android:textColor="@color/black"
            android:textColorHint="@color/hint_color"
            android:inputType="textPassword"
            android:elevation="10dp"
            tools:ignore="RtlSymmetry"
            android:autofillHints="tr"/>

        <Button
            android:id="@+id/sign_up"
            android:layout_width="80pt"
            android:layout_height="25pt"
            android:backgroundTint="@color/button_color"
            android:textColor="@color/black"
            android:textSize="10pt"
            android:layout_alignParentBottom="true"
            android:layout_marginBottom="10pt"
            android:layout_centerVertical="true"
            android:layout_centerHorizontal="true"
            android:elevation="20dp"
            android:text="@string/log_in_button_text" />

    </RelativeLayout>

</RelativeLayout>