<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".ProjectActivity">

    <RelativeLayout
        android:id="@+id/header"
        android:layout_width="match_parent"
        android:layout_height="120dp"
        android:background="@drawable/rectangle_1"
        android:elevation="20dp"
        tools:ignore="UselessParent">

        <RelativeLayout
            android:id="@+id/logo_view"
            android:layout_width="110pt"
            android:layout_height="120dp"
            android:background="@drawable/rectangle_1">
            <ImageView
                android:id="@+id/logo"
                android:layout_width="24pt"
                android:layout_height="24pt"
                android:layout_marginStart="10pt"
                android:layout_centerVertical="true"
                android:contentDescription="@string/headertriangle"
                android:elevation="20dp"
                app:srcCompat="@drawable/triangle"/>

            <TextView
                android:id="@+id/title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="10pt"
                android:layout_centerVertical="true"
                android:layout_marginStart="5pt"
                android:elevation="20dp"
                android:layout_toEndOf="@id/logo"
                android:text="@string/projecthive_title"
                tools:ignore="RelativeOverlap" />
        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/account_view"
            android:layout_width="wrap_content"
            android:layout_height="120dp"
            android:layout_toEndOf="@id/logo_view"
            android:background="@drawable/rectangle_1"
            android:layout_alignParentEnd="true">

            <ImageView
                android:id="@+id/account_image"
                android:layout_width="20pt"
                android:layout_height="20pt"
                app:srcCompat="@drawable/avatar"
                android:layout_marginTop="7pt"
                android:elevation="20dp"
                android:layout_centerHorizontal="true"
                android:contentDescription="@string/headertriangle"
                />

            <TextView
                android:id="@+id/login"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="9pt"
                android:layout_marginTop="30pt"
                android:layout_centerHorizontal="true"
                android:elevation="20dp"
                android:text="@string/artem"
                tools:ignore="RelativeOverlap" />

            <Button
                android:id="@+id/auth_button"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:backgroundTint="@color/white"
                android:textColor="@color/white"
                android:text="@string/log_in_text"/>
        </RelativeLayout>
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/second_part"
        android:layout_width="match_parent"
        android:layout_height="130dp"
        android:background="@color/white"
        android:elevation="20dp"
        android:layout_marginTop="1pt">

        <TextView
            android:id="@+id/title_word"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="15pt"
            android:layout_marginTop="5pt"
            android:layout_marginStart="10pt"
            android:text="@string/projects_text"
            android:layout_centerHorizontal="true"
            tools:ignore="RelativeOverlap" />

        <TextView
            android:id="@+id/search_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="12pt"
            android:layout_marginTop="7pt"
            android:layout_marginStart="10pt"
            android:layout_below="@id/title_word"
            android:text="@string/search_text"
            tools:ignore="RelativeOverlap" />

        <EditText
            android:id="@+id/search_bar"
            android:layout_width="105pt"
            android:layout_height="48dp"
            android:ems="10"
            android:inputType="text"
            android:background="@color/grey_bg"
            android:layout_below="@id/title_word"
            android:layout_marginTop="5pt"
            android:layout_marginHorizontal="10pt"
            android:layout_alignParentEnd="true"
            android:paddingStart="5pt"
            android:hint="@string/project_name"
            tools:ignore="LabelFor,RtlSymmetry"
            android:importantForAutofill="no" />
    </RelativeLayout>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/projects"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:elevation="20dp"
        android:background="@color/white"
        android:layout_marginTop="1pt"
        android:scrollbars="vertical"
        android:layout_weight="1"/>

    <RelativeLayout
        android:id="@+id/footer"
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:background="@drawable/rectangle_1"
        android:elevation="20dp"
        android:layout_marginTop="1pt">

        <Button
            android:id="@+id/calendar_button"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/button_color"
            android:textColor="@color/black"
            android:textSize="8pt"
            android:layout_centerVertical="true"
            android:layout_marginStart="10pt"
            android:text="@string/calendar_text" />

        <Button
            android:id="@+id/profile_btn"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/button_color"
            android:textColor="@color/black"
            android:textSize="8pt"
            android:layout_centerVertical="true"
            android:layout_alignParentEnd="true"
            android:layout_marginEnd="10pt"
            android:text="@string/profile_text"
            tools:ignore="RelativeOverlap" />

    </RelativeLayout>

</LinearLayout>