<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".OneProjectActivity">

    <RelativeLayout
        android:id="@+id/header"
        android:layout_width="match_parent"
        android:layout_height="120dp"
        android:background="@drawable/rectangle_1"
        android:elevation="20dp"
        tools:ignore="UselessParent">

        <RelativeLayout
            android:id="@+id/logo_view"
            android:layout_width="110pt"
            android:layout_height="120dp"
            android:background="@drawable/rectangle_1">
            <ImageView
                android:id="@+id/logo"
                android:layout_width="24pt"
                android:layout_height="24pt"
                android:layout_marginStart="10pt"
                android:layout_centerVertical="true"
                android:contentDescription="@string/headertriangle"
                android:elevation="20dp"
                app:srcCompat="@drawable/triangle"/>

            <TextView
                android:id="@+id/title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="10pt"
                android:layout_centerVertical="true"
                android:layout_marginStart="5pt"
                android:elevation="20dp"
                android:layout_toEndOf="@id/logo"
                android:text="@string/projecthive_title"
                tools:ignore="RelativeOverlap" />
        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/account_view"
            android:layout_width="wrap_content"
            android:layout_height="120dp"
            android:layout_toEndOf="@id/logo_view"
            android:background="@drawable/rectangle_1"
            android:layout_alignParentEnd="true">

            <ImageView
                android:id="@+id/account_image"
                android:layout_width="20pt"
                android:layout_height="20pt"
                app:srcCompat="@drawable/user_photo"
                android:layout_marginTop="7pt"
                android:elevation="20dp"
                android:layout_centerHorizontal="true"
                android:contentDescription="@string/headertriangle"
                />

            <TextView
                android:id="@+id/login"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="9pt"
                android:layout_marginTop="30pt"
                android:layout_centerHorizontal="true"
                android:elevation="20dp"
                android:text="@string/profil_name"
                tools:ignore="RelativeOverlap" />

            <Button
                android:id="@+id/auth_button"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:backgroundTint="@color/white"
                android:textColor="@color/white"
                android:text="@string/log_in_text"/>
        </RelativeLayout>
    </RelativeLayout>

    <ExpandableListView
        android:id="@+id/expandable_list_view"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:background="@drawable/rectangle_1"
        android:elevation="20dp"
        android:layout_marginTop="1pt"/>

    <RelativeLayout
        android:id="@+id/footer"
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:background="@drawable/rectangle_1"
        android:elevation="20dp"
        android:layout_marginTop="1pt">

        <Button
            android:id="@+id/calendar_button"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/button_color"
            android:textColor="@color/black"
            android:textSize="8pt"
            android:layout_centerVertical="true"
            android:layout_marginStart="10pt"
            android:text="@string/calendar_text" />

        <Button
            android:id="@+id/create_project"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/button_color"
            android:textColor="@color/black"
            android:textSize="8pt"
            android:layout_centerVertical="true"
            android:layout_alignParentEnd="true"
            android:layout_marginEnd="10pt"
            android:text="@string/projects_text"
            tools:ignore="RelativeOverlap" />
    </RelativeLayout>

</LinearLayout>